# lifecycle-platform-challenge

./: .gitignore  Makefile  README.md  pyproject.toml
ai-session/: cursor-log.md
airflow/dags/: reactivation_campaign_dag.py
config/: segments.yaml
docs/: part4_value_model_design.md  part5_observability.md
scripts/: airflow_local.sh
sql/: part1_audience.sql  part4_audience_scored.sql
src/lifecycle_platform/: __init__.py  backoff.py  batching.py  campaign_sender.py  dedup.py  esp_client.py  logging_config.py  metrics.py
tests/: conftest.py  test_backoff.py  test_batching.py  test_campaign_sender.py  test_dag_parses.py  test_dedup.py  test_segments_config.py  test_sql_part1_audience.py  test_sql_part4_scored.py
